--- a/.eslintrc
+++ b/.eslintrc
@@ -4,9 +4,12 @@
   "rules": {
     "prettier/prettier": ["warn", {
       "singleQuote": true,
-      "printWidth": 150
+      "printWidth": 150,
+      "endOfLine": "auto",
+      "trailingComma": "es5",
+      "useTabs": false
     }],
-    "import/first": 0
+    "no-console": 1
   },
   "env": {
     "browser": true,
