--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "singleQuote": true,
-  "printWidth": 150
+  "printWidth": 150,
+  "endOfLine": "auto",
+  "trailingComma": "es5",
+  "useTabs": false
 }
