--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,17 @@
 {
-  "extends": ["react-app", "react-app/jest", "plugin:prettier/recommended", "prettier/react"],
-  "plugins": ["prettier"],
+  "extends": ["react-app", "react-app/jest", "plugin:react-hooks/recommended","plugin:prettier/recommended", "prettier"],
+  "plugins": ["prettier", "react-hooks"],
   "rules": {
     "prettier/prettier": ["warn", {
       "singleQuote": true,
-      "printWidth": 150,
+      "printWidth": 120,
       "endOfLine": "auto",
       "trailingComma": "es5",
       "useTabs": false
     }],
-    "no-console": 1
+    "no-console": 0,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "env": {
     "browser": true,
